# equivariant-center-of-mass-estimation

./: .env.example  .gitignore  CONFIGURATION_APPROACHES.md  Dockerfile  README.md  README_train_gnn_optimized.md  TRAINING_GUIDE.md  basic_gnn.ckpt  check_connectivity.py  commit_log.txt  comparison_summary.md  config.yaml  config_base.yaml  config_basic_gnn.yaml  config_basic_gnn_augmented.yaml  config_centroid_baseline.yaml  config_centroid_baseline_wandb.yaml  config_convex_hull_baseline.yaml  config_convex_hull_baseline_wandb.yaml  config_eq_e3nn.yaml  config_eq_gnn.yaml  config_wandb.yaml  config_zero.yaml  debug_gnn_performance.py  debug_validation.py  eq_gnn.ckpt  gpu_optimization_test.py  improved_basic_gnn.ckpt  invoke.yaml  math.md  methods.md  paper_visualization.py  performance_comparison.py  pyproject.toml  requirements.txt  simple_gnn.ckpt  tasks.py  test.py  test.yaml  test_eq_gnn.py  (+10 more)
Data collection/: extract_shapenet_objs.py
configs/: basic_gnn.yaml  config.yaml  debug.yaml  debug_overfit.yaml  equivariant_gnn.yaml  preprocess_only.yaml  visualize.yaml  zero_baseline.yaml
evaluation_results/: detailed_results.csv  error_statistics.csv
gnn_baseline_results/: detailed_results.csv  error_statistics.csv
model_comparison/: model_comparison.csv
results/: model_results_raw.pkl  train.csv  val.csv  visualize_results.py
scripts/: benchmark_preprocessing.py  compare_models.py  convert_fbx_to_obj.py  evaluate_all_models.py  evaluate_gnn.py  generate_lidar_data.py  preprocess.py  split_dataset.py  train_gnn.py  visualize_equivariance.py  visualize_meshes.py  (+1 more)
(+318 files in other folders)
